# SolvBTC-Stellar-Contract

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.stellar/network/: local.toml
bridge/: Cargo.toml
bridge/src/: bridge.rs  lib.rs  test.rs  traits.rs
bridge/src/dependencies/: fungible_token.rs  mod.rs  oracle.rs
fungible-token/: Cargo.toml
fungible-token/src/: bakup.rs.bak  fungible_token.rs  lib.rs  test.rs  traits.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: vault_integration_test.rs
js-bindings/fungible-token/: README.md  package-lock.json  package.json
js-bindings/fungible-token/src/: index.ts
js-bindings/minter-manager/: README.md  package-lock.json  package.json
js-bindings/minter-manager/src/: index.ts
js-bindings/oracle/: README.md  package-lock.json  package.json
js-bindings/oracle/src/: index.ts
js-bindings/vault/: README.md  package-lock.json  package.json
js-bindings/vault/src/: index.ts
js-client/: package-lock.json  package.json
js-client/src/: config.js  config.js.example  query-minters.mjs  sdk-client.mjs  signature-utils.mjs  test-signature.mjs
minter-manager/: Cargo.toml
minter-manager/src/: lib.rs  minter_manager.rs  test.rs  traits.rs
minter-manager/src/dependencies/: fungible_token.rs  mod.rs
oracle/: Cargo.toml
oracle/src/: lib.rs  oracle.rs  test.rs  traits.rs
oracle/src/dependencies/: vault.rs
tests/: Cargo.toml
tests/integration-tests/: vault_integration_test.rs
tests/src/: lib.rs
tests/unit/vault/: deposit_tests.rs  mod.rs
vault/: Cargo.toml
vault/src/: lib.rs  test.rs  traits.rs  vault.rs
vault/src/dependencies/: fungible_token.rs  minter_manager.rs  mod.rs  oracle.rs
