[workspace]
members = [
    "fungible-token",
    "minter-manager",
    "oracle",
    "vault",
    "tests"
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "22.0.1"
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
sha3 = "0.10.8"
hex = "0.4"
stellar-strkey = "0.0.7"
rand = "0.8.5"
heapless = "0.8"

[workspace.package]
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[patch.crates-io]
base64ct = { git = "https://github.com/RustCrypto/formats.git", tag = "base64ct/v1.6.0" }