[package]
name = "solvbtc-bridge"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-ownable = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-ownable-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-default-impl-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-upgradeable = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-upgradeable-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
stellar-strkey = { workspace = true }
secp256k1 = { version = "0.27", features = ["recovery", "rand"] }
