[package]
name = "solvbtc-oracle"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-ownable = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-ownable-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-default-impl-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] } 