[package]
name = "tests"
version = "1.0.0"
edition = "2021"

# Integration test project does not need to generate cdylib
[lib]
crate-type = ["cdylib", "rlib"]

# Define integration tests location
[[test]]
name = "vault_integration_test"
path = "integration-tests/vault_integration_test.rs"
harness = true

[dependencies]
soroban-sdk = { workspace = true }
stellar-strkey = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
heapless = { workspace = true }

# Use package name as dependency name, and use the hyphen-to-underscore rule when importing
fungible_token = { path = "../fungible-token", package = "fungible-token" }
solvbtc_oracle = { path = "../oracle", package = "solvbtc-oracle" }
solvbtc_vault = { path = "../vault", package = "solvbtc-vault" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]