[package]
name = "tests"
version = "1.0.0"
edition = "2021"

# Integration test project does not need to generate cdylib
[lib]
crate-type = ["cdylib", "rlib"]

# Define integration tests location
[[test]]
name = "vault_integration_test"
path = "integration-tests/vault_integration_test.rs"
harness = true

[dependencies]
soroban-sdk = { workspace = true }
sha3 = { workspace = true }
secp256k1 = { version = "0.27", features = ["recovery"] }
stellar-strkey = { workspace = true }

# Use package name as dependency name, and use the hyphen-to-underscore rule when importing
fungible_token = { path = "../fungible-token", package = "fungible-token" }
solvbtc_oracle = { path = "../oracle", package = "solvbtc-oracle" }
solvbtc_vault = { path = "../vault", package = "solvbtc-vault" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
