[package]
name = "solvbtc-vault"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
hex = "0.4"
ed25519-dalek = "2.0"
rand = "0.8"

[features]
testutils = ["soroban-sdk/testutils"]



[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true 