[package]
name = "solvbtc-vault"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
ed25519-dalek = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] } 
rand = { workspace = true } 
stellar-strkey = { workspace = true }
heapless = { workspace = true }