[package]
name = "solvbtc-vault"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
stellar-ownable = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-ownable-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-default-impl-macro = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-upgradeable = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
stellar-upgradeable-macros = { git = "https://github.com/OpenZeppelin/stellar-contracts.git", tag = "v0.3.0" }
ed25519-dalek = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rand = { workspace = true }
stellar-strkey = { workspace = true }
heapless = { workspace = true }
fungible-token = { path = "../fungible-token" }
solvbtc-oracle = { path = "../oracle" }